# calcfuzztesting

rustfuzz/: Cargo.toml  readme.md
rustfuzz/fuzz/: Cargo.toml  calcu.rs
rustfuzz/fuzz/fuzz_targets/: calc.rs  calcu.rs  fuzz_target_1.rs
rustfuzz/src/: main.rs
